--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -22,3 +22,7 @@ Release.
 1.0.1 - 13 Nov 2023
 Readme updated.
 Icon updated.
+
+7.0.0
+Removed PaginatedQuery as useless.
+Updated version to correlate with .NET version.
