--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -23,13 +23,13 @@ Release.
 Readme updated.
 Icon updated.
 
-7.0.0
+7.0.0 - 18 Nov 2023
 Removed PaginatedQuery as useless.
 Updated version to correlate with .NET version.
 
-8.0.0
+8.0.0 - 18 Nov 2023
 Added support for .NET 8.
 
-8.0.1
+8.0.1 - 24 Nov 2023
 Fixed unhandled exception on .NET 8. System.TypeLoadException: GenericArguments[0], 'TCommnd', on 'MediatR.IRequestHandler`2[TRequest,TResponse]' violates the constraint of type parameter 'TRequest'.
 Upgrade packages.
