--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -33,3 +33,8 @@ Added support for .NET 8.
 8.0.1 - 24 Nov 2023
 Fixed unhandled exception on .NET 8. System.TypeLoadException: GenericArguments[0], 'TCommnd', on 'MediatR.IRequestHandler`2[TRequest,TResponse]' violates the constraint of type parameter 'TRequest'.
 Upgrade packages.
+
+8.1.2 - 3 Apr 2024
+Added NoRegisterAutomaticallyAttribute to avoid register instance of class automatically in DI.
+Small fixes.
+Added sample project.
