--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -43,3 +43,19 @@ Added sample project.
 Added IRequestFilter with Behaviour to filter request of query or command.
 Added IResultFilter with Behaviour to filter result of query or command.
 
+8.2.1 - 16 May 2024
+Add autobuild/push Nuget packets.
+
+8.2.2 - 16 May 2024
+Fix pipeline
+
+8.3.0 - 03 Yul 2024
+Set the RequestFilterBehavior before the ValidationBehavior.
+
+8.3.1 - 23 Feb 2025
+Small internal refactoring.
+Fix build pipeline.
+
+9.0.0 - 03 Mar 2025
+Added CommandEventTypeEnum to define a type of Event, should process event inside or outside of transaction.
+Renamed EventQueueProcessBehavior into CommandEventQueueProcessBehavior, EventHandler into CommandEventHandler, EventQueue into CommandEventQueue, IEvent into ICommandEvent, IEventQueue into ICommandEventQueue, IEventQueueReader into ICommandEventQueueReader and IEventQueueWriter into ICommandEventQueueWriter.
