--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -57,5 +57,5 @@ Small internal refactoring.
 Fix build pipeline.
 
 9.0.0 - 04 Mar 2025
-Added CommandEventTypeEnum to define a type of Event, should process event inside or outside of transaction.
+Added CommandEventTypeEnum to define a type of Event, which should process event inside or outside of a transaction.
 Renamed EventQueueProcessBehavior into CommandEventQueueProcessBehavior, EventHandler into CommandEventHandler, EventQueue into CommandEventQueue, IEvent into ICommandEvent, IEventQueue into ICommandEventQueue, IEventQueueReader into ICommandEventQueueReader and IEventQueueWriter into ICommandEventQueueWriter.
