--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -69,5 +69,8 @@ Hotfix/add some examples.
 9.2.0 - 09 Mar 2025
 add ILogger on CommandEvent processing.
 
-10.0.0 - 13 Mar 2025
+10.0.1 - 13 Mar 2025
 Added ILogger into CommandEventHandler and CommandHandler and QueryHandler.
+
+10.1.0 - 13 Mar 2025
+Make ObjectExtensions.GetObjectSize() safe for some cases.
