--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -74,3 +74,6 @@ Added ILogger into CommandEventHandler and CommandHandler and QueryHandler.
 
 10.1.0 - 13 Mar 2025
 Make ObjectExtensions.GetObjectSize() safe for some cases.
+
+10.1.1 - 17 Mar 2025
+Fix log field name.
