--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -87,19 +87,16 @@ Optimize work with Stopwatch.
 Improve internal logging.
 
 10.1.4 - 07 Sep 2025
-1. **Logging Improvements**:
+1) Logging Improvements:
    - Enhanced log message formatting (changed "for a {Elapsed} ms" to "in {Elapsed} ms")
    - Optimized work with Stopwatch
    - Improved internal logging
-2. **Dependency Updates**:
+2) Dependency Updates:
    - FluentValidation upgraded to version 11.11.0
-   - MediatR upgraded to version 12.5.0
-3. **Architectural Changes**:
+3) Architectural Changes:
    - Removed `AsyncRequestHandlerBase` class
    - `CommandHandler<TCommand>` now directly implements `IRequestHandler<TCommand>`
-   - Changed validation implementation: `ValidationBehavior` now uses `IRequestPreProcessor` instead of `IPipelineBehavior`
-   - Added `TaskWhenAllPublisher` for MediatR
-4. **Code Optimizations**:
+4) Code Optimizations:
    - Simplified some methods
    - Improved code formatting
    - Refactoring for cleaner architecture
