--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -85,3 +85,18 @@ Fix log value for Command, Event, Query.
 Fix issue with logging of Command, EventCommand and Query objects.
 Optimize work with Stopwatch.
 Improve internal logging.
+
+10.1.4 - 07 Sep 2025
+1) Logging Improvements:
+   - Enhanced log message formatting (changed "for a {Elapsed} ms" to "in {Elapsed} ms")
+   - Optimized work with Stopwatch
+   - Improved internal logging
+2) Dependency Updates:
+   - FluentValidation upgraded to version 11.11.0
+3) Architectural Changes:
+   - Removed `AsyncRequestHandlerBase` class
+   - `CommandHandler<TCommand>` now directly implements `IRequestHandler<TCommand>`
+4) Code Optimizations:
+   - Simplified some methods
+   - Improved code formatting
+   - Refactoring for cleaner architecture
